# ib_insync

./: .gitignore  CLAUDE.md  pyproject.toml  tasks.py
.claude/commands/: refactor-one-per-file.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ib_insync/: __init__.py  client.py  connection.py  event_topic.py  ib.py  ibcontroller.py  order.py  parseable_model.py  ticker.py  util.py  wrapper.py
ib_insync/contract/: __init__.py  adapter.py  base.py  details.py  enums.py  specialized.py
ib_insync/decoders/: __init__.py  base.py  dispatcher.py
ib_insync/decoders/handlers/: __init__.py  accounts.py  contracts.py  historical.py  (+3 more)
ib_insync/objects/: __init__.py  account_value.py  bar_data.py  bar_data_list.py  commission_report.py  connection_stats.py  depth_mkt_data_description.py  dividends.py  dom_level.py  dynamic_object.py  execution.py  execution_filter.py  family_code.py  fill.py  fundamental_ratios.py  histogram_data.py  historical_news.py  historical_schedule.py  historical_session.py  historical_tick.py  historical_tick_bid_ask.py  historical_tick_last.py  mkt_depth_data.py  news_article.py  news_bulletin.py  news_provider.py  news_tick.py  option_chain.py  option_computation.py  pnl.py  pnl_single.py  portfolio_item.py  position.py  price_increment.py  real_time_bar.py  real_time_bar_list.py  scan_data_list.py  scanner_subscription.py  smart_component.py  soft_dollar_tier.py  (+9 more)
ib_insync/order_enums/: __init__.py  auction_strategy.py  financial_advisor_allocation_method.py  hedge_type.py  one_cancels_all_type.py  order_origin.py  order_type.py  reference_price_type.py  time_in_force.py  trigger_method.py  user_type.py  volatility_type.py
references/: ibkr_data_dict.md
tests/: conftest.py  test_contracts.py  test_model_parsing.py  test_pydantic_decoder.py  test_requests.py  test_simple_parsing.py
(+11 files in other folders)
